--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.12",
     "validator": "^13.5.2"
   }
 }
