--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@admin-bro/express": "^3.0.1",
-    "@admin-bro/mongoose": "^1.1.0",
-    "admin-bro": "^3.3.1",
+    "@admin-bro/mongoose": "^1.0.2",
+    "admin-bro": "^3.2.5",
     "bcrypt": "^5.0.0",
+    "browserslist": "^4.16.6",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
