--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@admin-bro/express": "^3.0.1",
     "@admin-bro/mongoose": "^1.0.2",
     "admin-bro": "^3.2.5",
+    "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "browserslist": "^4.16.6",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "html-parse-stringify2": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
     "multer": "^1.4.2",
     "nodemon": "^2.0.12",
+    "quill": "^1.3.7",
     "validator": "^13.5.2"
   }
 }
