--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@admin-bro/express": "^3.0.1",
     "@admin-bro/mongoose": "^1.0.2",
     "admin-bro": "^3.2.5",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "browserslist": "^4.16.6",
     "cookie-parser": "^1.4.5",
@@ -24,6 +24,7 @@
     "mongoose": "^5.11.9",
     "multer": "^1.4.2",
     "nodemon": "^2.0.12",
+    "npm-check-updates": "^11.8.3",
     "quill": "^1.3.7",
     "validator": "^13.5.2"
   }
